# sphere-nerf

./: pyproject.toml
spherf/: spherf_config.py  spherf_field.py  spherf_model.py  spherf_pipeline.py
spherf/spherf_module/: interpolation.py  misc.py  sphere_grid.py  sphere_scene.py  sphere_scene_box.py
