[project]
name = "nerfstudio-spherf"
description = "SpheRF implmentation based on nerfstudio."
version = "0.1.0"

dependencies = ["nerfstudio == 0.3.4"]

[tool.setuptools.packages.find]
include = ["spherf*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
spherf = "spherf.spherf_config:spherf"

[tool.ruff]
select = [
    "E",   # pycodestyle errors.
    "F",   # Pyflakes rules.
    "PLC", # Pylint convention warnings.
    "PLE", # Pylint errors.
    "PLR", # Pylint refactor recommendations.
    "PLW", # Pylint warnings.
]
ignore = [
    "E501",    # Line too long.
    "F722",    # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "F821",    # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "PLR2004", # Magic value used in comparison.
    "PLR0915", # Too many statements.
    "PLR0913", # Too many arguments.
    "PLC0414", # Import alias does not rename variable. (this is used for exporting names)
    "PLC1901", # Use falsey strings.
    "PLR5501", # Use `elif` instead of `else if`.
    "PLR0911", # Too many return statements.
    "PLR0912", # Too many branches.
    "PLW0603", # Globa statement updates are discouraged.
    "PLW2901", # For loop variable overwritten.
]
